--- a/pkg/codegen/templates/inline-ui.tmpl
+++ b/pkg/codegen/templates/inline-ui.tmpl
@@ -21,7 +21,7 @@ func GetSwaggerUI(specURL string) ([]byte, error) {
 		return nil, fmt.Errorf("error decompressing spec: %s", err)
 	}
 
-	tmpl, err := template.New("swaggerui").Parse(string(buf.Bytes()))
+	tmpl, err := template.New("swaggerui").Delims("__LEFT_DELIM__", "__RIGHT_DELIM__").Parse(string(buf.Bytes()))
 
 	if err != nil {
 		return nil, fmt.Errorf("error loading swagger ui template: %s", err)
